--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "express": "^4.17.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "devStart": "nodemon server.js"
+    "start": "node server.js &",
+    "devStart": "nodemon server.js",
+    "end": "pkill -f server.js"
   },
   "name": "notion",
   "version": "1.0.0",
